--- a/composer.json
+++ b/composer.json
@@ -61,5 +61,8 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/web-profiler-bundle": "5.2.*"
     }
 }
