--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,14 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "symfony/asset": "5.2.*",
+        "symfony/browser-kit": "^5.2",
         "symfony/console": "5.2.*",
+        "symfony/css-selector": "^5.2",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.28",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
