--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@
 note
 .idea
 ###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+tests/bootstrap.php
+.env.test
+phpunit.xml.dist
+###< symfony/phpunit-bridge ###
